lots of interface refactoring wrt spells/items/usables